# murmur

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: app.js  enhance.css  enhance.js  index.html  styles.css
scripts/: install-macos.sh
server/: README.md  install.sh  run.sh  whisper_server.py
src/: native.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: whisper_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  fnkey.rs  history.rs  inject.rs  lib.rs  mic.rs  polish.rs  state.rs  transcribe.rs
src/components/: App.test.tsx  App.tsx  AutoEdit.tsx  Dashboard.test.tsx  Dashboard.tsx  Onboarding.test.tsx  Onboarding.tsx  Overlay.tsx  dashboard-helpers.test.ts
src/dashboard/: main.tsx
src/design-system/: fonts.css  hooks.ts  icons.tsx  keyframes.css  native.css  primitives.tsx  theme.test.ts  theme.ts  tokens.css
src/overlay/: main.tsx
src/state/: config.test.ts  config.ts  dictation.ts  updater.ts  useDictation.ts  useElapsed.test.ts  useElapsed.ts
src/test/: setup.ts
