[package]
name = "murmur"
version = "0.1.12"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# WAV reader for the whisper_smoke example only.
hound = "3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
# Real OS desktop blur behind the overlay (macOS NSVisualEffectView / Win Acrylic).
window-vibrancy = "0.6"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# In-app auto-update: checks GitHub releases (latest.json), verifies the update
# signature (Tauri's own minisign key), downloads + installs.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
# Local Whisper transcription (whisper.cpp). CPU build for now; enable per-platform
# GPU backends in CI for release (macOS: features= ["metal", "coreml"]).
whisper-rs = "0.16"
# Streaming model downloads from the HF mirror + multipart upload to a remote
# Whisper server (OpenAI-compatible /v1/audio/transcriptions).
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "multipart", "rustls-tls"] }
futures-util = "0.3"
# High-quality sinc/polyphase resampling (used in resample_to_16k; falls back to
# box-filter on any rubato error so inference is never blocked).
rubato = "0.15"
# Text injection: clipboard + synthetic paste/typing.
enigo = "0.6"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# Accessibility (AXIsProcessTrusted) check + prompt — required for synthetic input.
macos-accessibility-client = "0.0.2"
# fn (Globe) key trigger: a CGEventTap watches FlagsChanged for the fn key. The
# global-shortcut system can't bind fn, so we drop to a low-level event tap.
core-graphics = "0.25"
core-foundation = "0.10"
# Microphone authorization via AVFoundation (single prompt + status check) — the
# cpal probe re-triggers the system prompt while the decision is still pending.
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"
# On macOS, override the CPU-only whisper-rs with the Metal GPU backend.
# CoreML is intentionally omitted (requires a generated CoreML model bundle).
whisper-rs = { version = "0.16", features = ["metal"] }

